--- a/style.css
+++ b/style.css
@@ -90,5 +90,18 @@ section{ display: flex;}
 .half-three{ margin-left: 100px;
              margin-top: 0px;
              width: 45%;}
+    
+/* this is section four */
+.four{ display: flex;}
+.half-four{text-align: left;
+           margin-left: 245px;
+           margin-top: 100px;
+         width: 40%;}
+.four img{ display: flex;
+           margin-top: 100px;
+           border-radius: 40PX;
+           width: 40%;
+           margin-left: 30px;}
+
 
 
